--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,86 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  font-display: swap;
+}
 
 body {
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
-  overflow-x: hidden;
-  color: #000;
-  font-size: 16px;
+  font-family: 'Roboto', sans-serif !important;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-  transition: opacity .2s ease;
+.logo {
+  margin-top: 10em;
 }
 
-a:hover {
-  transition: opacity .2s ease;
-  opacity: .5;
-  text-decoration-color: inherit;
-}
-ul {
-  list-style: none;
-  margin: 0;
+img {
+  width: 100%;
+  height: auto;
 }
 
-//TYPOGRAPHY-------------------------------------
-
-h1, h2, h3, h4, h5, h6, p {
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
+.text {
+  text-align: center;
 }
 
-h1, h2 {
-  font-weight: 500;
-}
-
-h1 {
-  font-size: 2rem;
-  letter-spacing: -1px;
-  line-height: 1.1875;
-}
-
-h2 {
-  font-size: 1.7rem;
-  letter-spacing: -.75px;
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 1.2rem;
-  letter-spacing: -.5px;
-  line-height: 1.1875;
-  color: #A0A0A0;
-  font-weight: normal;
-}
-
-p {
-  font-size: 1.2rem;
-  letter-spacing: -.5px;
-  line-height: 1.5;
-}
-
-@media (min-width: 1280px) {
-
-  h1 {
-    font-size: 2rem;
-    letter-spacing: -1px;
-    line-height: 1.1875;
-  }
-  
-  h2 {
-    font-size: 1.5rem;
-    letter-spacing: -.75px;
-    line-height: 1.1667;
-  }
-  
-  h3 {
-    letter-spacing: -.5px;
-    line-height: 1.1875;
-    color: #A0A0A0;
-    font-weight: normal;
-  }
-
-  p {
-    line-height: 1.4375;
-  }
+.insta {
+  width: 45px !important;
+  height: auto;
 }
