--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -12,6 +12,11 @@ body {
   margin-top: 10em;
 }
 
+a {
+  color: black !important;
+  text-decoration: underline !important;
+}
+
 img {
   width: 100%;
   height: auto;
